<resources>
    <string name="app_name">EduJourney</string>
    <string name="title_activity_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Type And Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="course_title">Ini Course Pertama</string>
    <string name="image_course">Image Course</string>
    <string name="soft_skills">Soft Skills</string>
    <string name="more">More</string>
    <string name="skills_box">Skills Box</string>
    <string name="hard_skills">Hard Skills</string>
    <string name="recommended_course">Recommended Course</string>
    <string name="free_course">Free Course</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="edupoint">EduPoint :</string>
    <string name="point">100000</string>
    <string name="personal_data">Personal Data</string>
    <string name="change_profile">Change Profile</string>
    <string name="purchase_history">Purchase History</string>
    <string name="user_logo">User Logo</string>
    <string name="history_logo">History Logo</string>
    <string name="other">Other</string>
    <string name="about_us_logo">About us Logo</string>
    <string name="about_us">About Us</string>
    <string name="logout_logo">Logout Logo</string>
    <string name="log_out">Log Out</string>
    <string name="rupiah">Rp.000.000.000</string>
    <string name="date">01–11–00</string>
    <string name="edujourney">EduJourney</string>
    <string name="subtitle">The Place to Start your Education</string>
    <string name="email">Email</string>
    <string name="register">Register Now</string>
    <string name="back_login">Already Have Account? Login!</string>
    <string name="password_logo">Password Logo</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="telp">Phone No.</string>
    <string name="birth_date">Birth Date</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="overview_course">Overview Course</string>
    <string name="silabus">Silabus</string>
    <string name="module_title">Judul Module</string>
    <string name="profile">Profile</string>
    <string name="owned_course">Owned Course</string>
    <string name="emptycourse">You don\'t have any course</string>
    <string name="price">Harga</string>
    <string name="price_free">Free</string>
    <string name="enrolled">Enrolled</string>
    <string name="enroll_success">Enroll Successful</string>
    <string name="wrong">Incorrect Email or Password</string>
    <string name="about">
        EduJourney: The Place to Start your education \n
        1. Muhammad Adisatriyo Pratama \n
		2. Jonathan Elloy \n
		3. David Raharja \n
		4. Lubby Gennady \n
		5. Khairunnas \n
		6. Mukhlis Adi Suryanto</string>
</resources>