<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.login.LoginActivity">

    <View
        android:id="@+id/bg"
        android:layout_width="350dp"
        android:layout_height="650dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/edujourney"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/bg"
        app:layout_constraintStart_toStartOf="@+id/bg"
        app:layout_constraintTop_toTopOf="@+id/bg"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/bg"
        app:layout_constraintStart_toStartOf="@+id/bg"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageView
        android:id="@+id/userLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="148dp"
        android:src="@drawable/ic_baseline_person_outline_dark_24"
        app:layout_constraintStart_toStartOf="@+id/bg"
        app:layout_constraintTop_toBottomOf="@+id/subTitle"
        android:contentDescription="@string/user_logo" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/bg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/userLogo"
        app:layout_constraintTop_toBottomOf="@+id/subTitle"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/pwLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_baseline_lock_dark_24"
        app:layout_constraintStart_toStartOf="@+id/bg"
        app:layout_constraintTop_toBottomOf="@+id/userLogo"
        android:contentDescription="@string/password_logo" />

    <EditText
        android:id="@+id/edt_pw"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/bg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pwLogo"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_btn"
        android:elevation="10dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/bg"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/bg"
        app:layout_constraintTop_toBottomOf="@+id/edt_pw" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_btn"
        android:elevation="10dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/bg"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/bg"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>